--- a/public/admin.html
+++ b/public/admin.html
@@ -117,281 +117,4 @@
   #list{margin-top:24px;}
   .item{
     display:grid;
-    grid-template-columns: var(--listColW) 1fr var(--listColW);
-    gap:8px; align-items:center; margin:6px 0;
-  }
-  .item input, .item .btn{ height:36px; }
-  .item .name{
-    width:var(--listColW);min-width:var(--listColW);max-width:var(--listColW);
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:8px 10px;color:#fff;outline:none;font-size:12.5px;text-align:left;
-  }
-  .item .url{
-    width:100%;min-width:0;
-    background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:8px 12px;color:#fff;outline:none;font-size:13px;
-  }
-  .item .btn{
-    min-width:var(--listColW);max-width:var(--listColW);
-    display:flex;align-items:center;justify-content:center;font-size:12.5px;
-  }
-
-  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px}
-
-  /* ===== Mini tarjeta: Configuración (alineación exacta) ===== */
-  .cfg-grid{
-    display:grid;
-    /* 4 columnas compartidas por ambas filas:
-       [ Rotar cada ] [ número ] [ clicks ] [ botón ] */
-    grid-template-columns: var(--cfgLabelW) var(--cfgNumberW) var(--cfgSuffixW) var(--saveBtnW);
-    align-items:center;
-    gap: var(--cfgGap);
-    width:100%;
-  }
-  .cfg-label,.cfg-suffix{
-    color:#d7ccff; font-size:13px; white-space:nowrap;
-  }
-
-  /* Inputs de Configuración: mismo alto exacto */
-  #blocksize,
-  #token{
-    height: var(--fieldH);
-    background:#2b2250;
-    border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;
-    color:#fff;
-    font-size:13px;
-    outline:none;
-  }
-  #blocksize{
-    width:100%;
-    text-align:center;
-    padding:6px 6px;
-  }
-  /* El token ocupa las columnas 1 a 3: desde "Rotar" hasta "clicks" */
-  #token{
-    grid-column: 1 / 4;
-    width:100%;
-    padding:8px 10px;
-    min-width:0; /* evita desborde */
-  }
-
-  /* Botones de Configuración: mismo alto exacto y ancho fijo de columna 4 */
-  .cfg-grid .btn{
-    height: var(--fieldH);
-    width:100%;
-    justify-content:center;
-    font-size:12px;
-    padding:0 12px;
-  }
-
-  /* ===== Botón estadísticas ===== */
-  .stats-card{
-    margin:18px auto;
-    padding:14px;
-    display:flex;align-items:center;justify-content:center;gap:10px;
-    cursor:pointer;user-select:none;
-    background:linear-gradient(var(--card),var(--card)) padding-box,
-               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
-    box-shadow:0 12px 40px rgba(0,0,0,.45);
-  }
-  .stats-card:hover{filter:brightness(1.05);transform:translateY(-1px);transition:.18s}
-  .stats-icon{
-    width:20px;height:20px;border-radius:50%;
-    background:conic-gradient(from 0deg,#ffffff 0deg 110deg,#b985ff 110deg 360deg);
-  }
-
-  @media(max-width:420px){
-    .logo{width:216px;margin:8px auto -38px}
-    .card-inner{padding:14px 10px}
-    .btn{font-size:12.5px}
-
-    :root{
-      --cfgLabelW:95px;
-      --cfgNumberW:60px;
-      --cfgSuffixW:55px;
-      --saveBtnW:140px;
-      --cfgGap:6px;
-    }
-
-    .item{ grid-template-columns: 96px 1fr 96px; }
-  }
-</style>
-</head>
-<body>
-<canvas id="bg"></canvas>
-
-<div class="shell">
-  <div class="logo-wrap">
-    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
-  </div>
-
-  <!-- Tarjeta principal -->
-  <div class="card">
-    <div class="card-inner">
-      <h1>PANEL ADMIN</h1>
-
-      <div class="actions-top">
-        <button class="btn btn--thin btn--sm" id="btnView">Ver lista</button>
-        <button class="btn btn--thin btn--sm" id="btnRot">Resetear rotación</button>
-        <button class="btn btn--thin btn--sm" id="btnReset">Borrar lista</button>
-      </div>
-
-      <div class="actions-bottom">
-        <button class="btn btn--main" id="btnAdd">AGREGAR CAJERA</button>
-      </div>
-
-      <div id="list"></div>
-      <div class="save-wrap">
-        <button class="btn btn--thin" id="btnSaveFinal">Guardar</button>
-      </div>
-      <p id="msg"></p>
-    </div>
-  </div>
-
-  <!-- Botón Estadísticas -->
-  <div class="stats-card" id="btnStats">
-    <div class="stats-icon"></div>
-    <span>Estadísticas</span>
-  </div>
-
-  <!-- Mini tarjeta inferior -->
-  <div class="card-mini">
-    <div class="mini-inner">
-      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
-
-      <!-- GRID ALINEADO: token ocupa de "Rotar" a "clicks" -->
-      <div class="cfg-grid">
-        <!-- Fila 1 -->
-        <label class="cfg-label">Rotar cada</label>
-        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
-        <span class="cfg-suffix">clicks</span>
-        <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button>
-
-        <!-- Fila 2 -->
-        <input id="token" type="text" placeholder="tok99-2025">
-        <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<script>
-// ===== Fondo partículas =====
-const c=document.getElementById("bg"),x=c.getContext("2d");
-let P=[];
-function rs(){c.width=innerWidth;c.height=innerHeight}
-addEventListener("resize",rs);rs();
-for(let i=0;i<90;i++){
-  P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
-}
-(function anim(){
-  const grad=x.createRadialGradient(c.width*0.3,c.height*0.1,0,c.width*0.3,c.height*0.1,Math.max(c.width,c.height));
-  const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
-  grad.addColorStop(0,cs('--bg1'));grad.addColorStop(1,cs('--bg2'));
-  x.fillStyle=grad;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
-  for(const p of P){
-    p.x+=p.vx;p.y+=p.vy;
-    if(p.x<0||p.x>c.width)p.vx*=-1;
-    if(p.y<0||p.y>c.height)p.vy*=-1; /* condición correcta */
-    x.beginPath();x.arc(p.x,p.y,p.r,0,Math.PI*2);x.fill();
-  }
-  requestAnimationFrame(anim);
-})();
-
-// ===== Panel =====
-const $=s=>document.querySelector(s);
-const list=$("#list"),msg=$("#msg"),tokenInput=$("#token"),bsInput=$("#blocksize");
-
-function row(val={name:"",url:""}) {
-  if(typeof val==="string") val={name:"",url:val};
-  const d=document.createElement("div");d.className="item";
-  const iName=document.createElement("input");iName.type="text";iName.placeholder="Nombre";iName.className="name";iName.value=val.name||"";
-  const iUrl=document.createElement("input");iUrl.type="text";iUrl.placeholder="https://wa.me/...";iUrl.className="url";iUrl.value=val.url||"";
-  const b=document.createElement("button");b.className="btn btn--thin btn--sm";b.textContent="Borrar";b.onclick=()=>d.remove();
-  d.append(iName,iUrl,b);list.append(d);
-}
-function values(){
-  return [...list.querySelectorAll(".item")].map(el=>{
-    const name=el.querySelector(".name")?.value.trim()||"";
-    const url=el.querySelector(".url")?.value.trim()||"";
-    return url?{name,url}:null;
-  }).filter(Boolean);
-}
-function show(t,ok=1){msg.textContent=t;msg.className=ok?"ok":"err"}
-
-$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",tokenInput.value.trim());show("Token guardado")};
-
-window.onload=async()=>{
-  const t=localStorage.getItem("adm_tok");
-  if(t) tokenInput.value=t;
-  if(t){ await loadBlockSize(t); }
-};
-
-$("#btnView").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  try{
-    show("Cargando...");
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();
-    list.innerHTML="";(j.links||[]).forEach(o=>row(o));
-    if((j.links||[]).length===0)row();
-    show("Lista cargada");
-  }catch(e){show("Error al cargar",0);}
-};
-
-$("#btnReset").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
-    const j=await r.json();list.innerHTML="";row();
-    show(j.ok?"Lista borrada":"Error",j.ok);
-  }catch(e){show("Error",0);}
-};
-
-$("#btnRot").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  try{
-    const r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
-    const j=await r.json();show(j.ok?"Rotación reiniciada":"Error",j.ok);
-  }catch(e){show("Error",0);}
-};
-
-$("#btnAdd").onclick=()=>row();
-
-$("#btnSaveFinal").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const vals=values();if(!vals.length)return show("Nada que guardar",0);
-  try{
-    show("Guardando...");
-    const r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
-      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)
-    });
-    const j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error al guardar",j.ok);
-  }catch(e){show("Error al guardar",0);}
-};
-
-async function loadBlockSize(t){
-  try{
-    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}&get=1`);
-    const j=await r.json();if(j.ok&&j.value!==undefined)bsInput.value=j.value;
-  }catch(e){}
-}
-
-$("#btnSaveBS").onclick=async()=>{
-  const t=tokenInput.value.trim();if(!t)return show("Poné token",0);
-  const v=Number(bsInput.value);
-  if(!Number.isInteger(v)||v<1||v>20)return show("Valor inválido (1 a 20)",0);
-  try{
-    const r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
-      method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})
-    });
-    const j=await r.json();show(j.ok?`Block size guardado (${v})`:"Error al guardar",j.ok);
-  }catch(e){show("Error al guardar",0);}
-};
-
-$("#btnStats").onclick=()=>show("📊 Próximamente: Conteo de mensajes y métricas.",1);
-</script>
-</body>
-</html>
+    grid-temp
