--- a/public/admin.html
+++ b/public/admin.html
@@ -5,25 +5,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>PANEL ADMIN</title>
 <style>
-  /* Evita desbordes inesperados en layouts responsivos */
-  *{ box-sizing:border-box; }
+  *{box-sizing:border-box;}
 
   :root{
-    --bg1:#4b0082; --bg2:#000000; --particle:#c7b3ff;
+    --bg1:#4b0082; --bg2:#000; --particle:#c7b3ff;
     --card:#1c1433f0; --edge1:rgba(174,143,255,.16); --edge2:rgba(255,255,255,.55);
-    --text:#ffffff; --muted:#c9c0f2; --btn-bg:#1e1935;
-    --neonA:#b985ff; --neonB:#efe6ff; --pulse:#7f5cff;
-
-    /* Ajustes rápidos */
-    --listColW:108px;    /* col Nombre y Borrar */
-    --saveBtnW:160px;    /* ancho de Guardar / Guardar token (mini tarjeta) */
-    --fieldH:36px;       /* alto unificado inputs/botones en Configuración */
-
-    /* Grid de Configuración (mini tarjeta) */
-    --cfgLabelW:110px;   /* "Rotar cada" */
-    --cfgNumberW:70px;   /* [número] */
-    --cfgSuffixW:60px;   /* "clicks" */
-    --cfgGap:8px;        /* separación entre columnas */
+    --text:#fff; --muted:#c9c0f2; --btn-bg:#1e1935;
+    --neonA:#b985ff; --neonB:#efe6ff;
+    --listColW:108px;
+    --fieldH:36px;
   }
 
   html,body{
@@ -35,86 +25,192 @@
   canvas{position:fixed;inset:0;width:100%;height:100%;z-index:0}
   .shell{position:relative;z-index:2;max-width:760px;margin:4px auto 32px;padding:0 14px}
   .logo-wrap{display:flex;justify-content:center}
-  .logo{width:240px;display:block;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;}
+  .logo{width:240px;filter:drop-shadow(0 6px 18px rgba(115,90,255,.35));margin:10px auto -36px;display:block}
 
   .card,.card-mini{
-    position:relative;z-index:1;margin:0 auto;
+    position:relative;margin:0 auto;border-radius:20px;
     background:linear-gradient(var(--card),var(--card)) padding-box,
                linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
-    border:1px solid transparent;border-radius:20px;
+    border:1px solid transparent;
     box-shadow:0 12px 40px rgba(0,0,0,.45);
   }
   .card-inner{padding:16px 14px}
-  .card-mini{ overflow:hidden; } /* evita que algo se vea fuera de la tarjeta */
-  .mini-inner{padding:14px 14px}
-  h1{text-align:center;margin:2px 0 8px;font-size:24px;letter-spacing:.4px}
-  p,small{color:var(--muted);text-align:center;margin:0}
+  .card-mini{overflow:hidden;}
+  .mini-inner{padding:14px}
+  h1{text-align:center;margin:2px 0 8px;font-size:24px}
+  p{color:var(--muted);text-align:center;margin:0}
 
-  .row{display:flex;gap:8px;margin:8px 0;flex-wrap:wrap}
-  input[type=text],input[type=number]{
-    flex:1;background:#2b2250;border:1px solid rgba(180,140,255,.35);
-    border-radius:12px;padding:10px 12px;color:#fff;outline:none;
+  input{
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);
+    border-radius:12px;color:#fff;font-size:13px;outline:none;
   }
   input::placeholder{color:#9a8ccc}
 
-  /* ===== Botones ===== */
   .btn{
-    position:relative;border:none;border-radius:12px;padding:10px 12px;
-    color:#fff;cursor:pointer;outline:none;background:var(--btn-bg);
-    white-space:nowrap;font-weight:600;letter-spacing:.2px;text-align:center;
-    box-shadow:0 6px 18px rgba(40,0,120,.22);z-index:0;
+    border:none;border-radius:12px;background:var(--btn-bg);
+    color:#fff;cursor:pointer;font-weight:600;
     display:flex;align-items:center;justify-content:center;
-    height:36px;font-size:12.5px;
+    height:var(--fieldH);padding:0 12px;font-size:12.5px;
+    box-shadow:0 6px 18px rgba(40,0,120,.22);
   }
   .btn:hover{filter:brightness(1.08)}
-  .btn > *{position:relative;z-index:2}
-  .btn::before{content:"";position:absolute;inset:0;border-radius:12px;z-index:1;background:transparent;}
-  .btn--thin::before{
-    inset:-1px;border-radius:13px;
-    background:conic-gradient(from 45deg,var(--neonA)0%,var(--neonB)18%,var(--neonA)36%,var(--neonA)100%);
-    -webkit-mask:linear-gradient(#000 0 0) content-box,linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor;mask-composite:exclude;padding:1px;
-    filter:saturate(90%) blur(.15px) opacity(.85);
-  }
-  .btn--sm{ height:34px; padding:8px 10px; font-size:12px; }
 
-  /* ===== Top 3 botones ===== */
-  .actions-top{
-    display:grid;
-    grid-template-columns:1fr 1fr 1fr;
-    gap:8px;
-    margin:8px 0 6px;
-  }
-  #btnRot{ font-size:11.4px; }
+  .actions-top{display:grid;grid-template-columns:1fr 1fr 1fr;gap:8px;margin:8px 0 6px;}
+  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;}
+  .btn--main{font-size:15px;padding:12px 16px;min-width:220px;background:#231a44;box-shadow:0 10px 28px rgba(127,92,255,.35),0 0 22px rgba(127,92,255,.22);}
 
-  /* ===== Botón principal ===== */
-  .actions-bottom{display:flex;justify-content:center;margin:18px 0 6px;position:relative;}
-  .btn--main{
-    position:relative;
-    font-size:15px; padding:12px 16px; min-width:220px;
-    background:#231a44;
-    box-shadow:0 10px 28px rgba(127,92,255,.35), 0 0 22px rgba(127,92,255,.22);
-  }
-  .btn--main::before{
-    content:""; position:absolute; inset:-2px; border-radius:14px; z-index:1;
-    background:conic-gradient(from 30deg, var(--neonA) 0%, var(--neonB) 14%, var(--neonA) 28%, var(--neonA) 100%);
-    -webkit-mask: linear-gradient(#000 0 0) content-box, linear-gradient(#000 0 0);
-    -webkit-mask-composite:xor; mask-composite:exclude;
-    padding:2px; filter:saturate(120%) blur(.35px) opacity(.95);
-  }
-  .btn--main::after{
-    content:""; position:absolute; z-index:0; inset:-16px; border-radius:28px;
-    background: radial-gradient(45% 70% at 50% 50%, rgba(127,92,255,.55), rgba(127,92,255,.22) 55%, transparent 75%);
-    filter:blur(16px);
-    animation:breath 2.8s ease-in-out infinite;
-  }
-  @keyframes breath{
-    0%,100%{ transform:scale(0.96); opacity:.85; }
-    50%    { transform:scale(1.06); opacity:1;   }
-  }
-
-  /* ===== Lista: Nombre | wa link | Borrar ===== */
+  /* ===== Lista ===== */
   #list{margin-top:24px;}
-  .item{
+  .item{display:grid;grid-template-columns:var(--listColW) 1fr var(--listColW);gap:8px;align-items:center;margin:6px 0;}
+  .item input,.item .btn{height:var(--fieldH);}
+  .save-wrap{display:flex;justify-content:center;margin:16px 0 6px;}
+
+  /* ===== Configuración ===== */
+  .cfg-grid{
     display:grid;
-    grid-temp
+    grid-template-columns:110px 70px 60px 160px; /* Rotar | número | clicks | botón */
+    align-items:center;gap:8px;width:100%;
+  }
+  .cfg-label,.cfg-suffix{color:#d7ccff;font-size:13px;white-space:nowrap;}
+  #blocksize,#token{height:var(--fieldH);width:100%;}
+  #blocksize{text-align:center;padding:6px 6px;}
+  #token{grid-column:1/4;padding:8px 10px;}
+  .cfg-grid .btn{width:100%;height:var(--fieldH);justify-content:center;}
+
+  /* ===== Estadísticas ===== */
+  .stats-card{
+    margin:18px auto;padding:14px;display:flex;align-items:center;justify-content:center;gap:10px;
+    cursor:pointer;user-select:none;border-radius:20px;
+    background:linear-gradient(var(--card),var(--card)) padding-box,
+               linear-gradient(145deg,var(--edge1),var(--edge2),var(--edge1)) border-box;
+  }
+  .stats-icon{width:20px;height:20px;border-radius:50%;background:conic-gradient(from 0deg,#fff 0deg 110deg,#b985ff 110deg 360deg);}
+
+  /* ===== PARCHE RESPONSIVO ===== */
+  @media (max-width:430px){
+    .mini-inner{padding:12px;}
+    .cfg-grid{grid-template-columns:minmax(88px,100px) minmax(56px,70px) minmax(52px,60px) minmax(120px,150px);gap:6px;}
+    .cfg-label,.cfg-suffix{font-size:12px;}
+    #token{padding:7px 8px;}
+    .cfg-grid .btn{font-size:11.5px;}
+  }
+  @media (max-width:375px){
+    .mini-inner{padding:10px;}
+    .cfg-grid{grid-template-columns:minmax(82px,94px) minmax(52px,64px) minmax(48px,56px) minmax(110px,130px);gap:5px;}
+    .cfg-label,.cfg-suffix{font-size:11.5px;}
+    #blocksize,#token,.cfg-grid .btn{border-radius:10px;height:32px;}
+  }
+  @media (max-width:340px){
+    .mini-inner{padding:8px;}
+    .cfg-grid{grid-template-columns:minmax(74px,86px) minmax(48px,58px) minmax(44px,52px) minmax(108px,124px);}
+    .cfg-label,.cfg-suffix{letter-spacing:0;}
+  }
+</style>
+</head>
+<body>
+<canvas id="bg"></canvas>
+
+<div class="shell">
+  <div class="logo-wrap">
+    <img class="logo" src="/insomnia-logo.png" alt="Insomnia Logo">
+  </div>
+
+  <div class="card">
+    <div class="card-inner">
+      <h1>PANEL ADMIN</h1>
+
+      <div class="actions-top">
+        <button class="btn" id="btnView">Ver lista</button>
+        <button class="btn" id="btnRot">Resetear rotación</button>
+        <button class="btn" id="btnReset">Borrar lista</button>
+      </div>
+
+      <div class="actions-bottom">
+        <button class="btn btn--main" id="btnAdd">AGREGAR CAJERA</button>
+      </div>
+
+      <div id="list"></div>
+      <div class="save-wrap"><button class="btn" id="btnSaveFinal">Guardar</button></div>
+      <p id="msg"></p>
+    </div>
+  </div>
+
+  <div class="stats-card" id="btnStats">
+    <div class="stats-icon"></div><span>Estadísticas</span>
+  </div>
+
+  <!-- Configuración -->
+  <div class="card-mini">
+    <div class="mini-inner">
+      <p style="text-align:center;color:#dcd2ff;margin-bottom:10px;">Configuración</p>
+      <div class="cfg-grid">
+        <label class="cfg-label">Rotar cada</label>
+        <input id="blocksize" type="number" min="1" max="20" step="1" placeholder="2">
+        <span class="cfg-suffix">clicks</span>
+        <button class="btn" id="btnSaveBS">Guardar</button>
+
+        <input id="token" type="text" placeholder="tok99-2025">
+        <button class="btn" id="btnSaveToken">Guardar token</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+const c=document.getElementById("bg"),x=c.getContext("2d");let P=[];
+function rs(){c.width=innerWidth;c.height=innerHeight}
+addEventListener("resize",rs);rs();
+for(let i=0;i<80;i++)P.push({x:Math.random()*c.width,y:Math.random()*c.height,vx:(Math.random()-.5)*.28,vy:(Math.random()-.5)*.28,r:Math.random()*2+.7});
+(function anim(){
+  const g=x.createRadialGradient(c.width*0.3,c.height*0.1,0,c.width*0.3,c.height*0.1,Math.max(c.width,c.height));
+  const cs=p=>getComputedStyle(document.documentElement).getPropertyValue(p).trim();
+  g.addColorStop(0,cs('--bg1'));g.addColorStop(1,cs('--bg2'));
+  x.fillStyle=g;x.fillRect(0,0,c.width,c.height);x.fillStyle=cs('--particle');
+  for(const p of P){p.x+=p.vx;p.y+=p.vy;if(p.x<0||p.x>c.width)p.vx*=-1;if(p.y<0||p.y>c.height)p.vy*=-1;x.beginPath();x.arc(p.x,p.y,p.r,0,6.28);x.fill();}
+  requestAnimationFrame(anim);
+})();
+
+const $=s=>document.querySelector(s),list=$("#list"),msg=$("#msg"),token=$("#token"),bs=$("#blocksize");
+function row(v={name:"",url:""}){if(typeof v==="string")v={name:"",url:v};
+  const d=document.createElement("div");d.className="item";
+  d.innerHTML=`<input type="text" placeholder="Nombre" class="name" value="${v.name}">
+               <input type="text" placeholder="https://wa.me/..." class="url" value="${v.url}">
+               <button class="btn">Borrar</button>`;
+  d.querySelector("button").onclick=()=>d.remove();list.append(d);}
+function values(){return[...list.querySelectorAll(".item")].map(e=>{let n=e.querySelector(".name").value.trim(),u=e.querySelector(".url").value.trim();return u?{name:n,url:u}:null}).filter(Boolean);}
+function show(t,ok=1){msg.textContent=t;msg.style.color=ok?"#9eff9e":"#ff8080";}
+
+$("#btnSaveToken").onclick=()=>{localStorage.setItem("adm_tok",token.value.trim());show("Token guardado")};
+window.onload=async()=>{let t=localStorage.getItem("adm_tok");if(t)token.value=t;};
+$("#btnView").onclick=async()=>{let t=token.value.trim();if(!t)return show("Poné token",0);
+  show("Cargando...");try{let r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&get=1`);
+  let j=await r.json();list.innerHTML="";(j.links||[]).forEach(o=>row(o));if(!j.links?.length)row();show("Lista cargada");}
+  catch{show("Error al cargar",0);}};
+
+$("#btnReset").onclick=async()=>{let t=token.value.trim();if(!t)return show("Poné token",0);
+  try{let r=await fetch(`/api/admin?token=${encodeURIComponent(t)}&reset=1`);
+  let j=await r.json();list.innerHTML="";row();show(j.ok?"Lista borrada":"Error",j.ok);}catch{show("Error",0);}};
+
+$("#btnRot").onclick=async()=>{let t=token.value.trim();if(!t)return show("Poné token",0);
+  try{let r=await fetch(`/api/rotate-reset?token=${encodeURIComponent(t)}`);
+  let j=await r.json();show(j.ok?"Rotación reiniciada":"Error",j.ok);}catch{show("Error",0);}};
+
+$("#btnAdd").onclick=()=>row();
+$("#btnSaveFinal").onclick=async()=>{
+  let t=token.value.trim();if(!t)return show("Poné token",0);
+  let vals=values();if(!vals.length)return show("Nada que guardar",0);
+  try{show("Guardando...");let r=await fetch(`/api/admin-post?token=${encodeURIComponent(t)}`,{
+    method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(vals)});
+  let j=await r.json();show(j.ok?`Guardado (${j.saved})`:"Error",j.ok);}catch{show("Error al guardar",0);}};
+
+$("#btnSaveBS").onclick=async()=>{
+  let t=token.value.trim();if(!t)return show("Poné token",0);
+  let v=Number(bs.value);if(!Number.isInteger(v)||v<1||v>20)return show("Valor inválido (1 a 20)",0);
+  try{let r=await fetch(`/api/blocksize?token=${encodeURIComponent(t)}`,{
+    method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({value:v})});
+  let j=await r.json();show(j.ok?`Block size guardado (${v})`:"Error",j.ok);}catch{show("Error al guardar",0);}};
+
+$("#btnStats").onclick=()=>show("📊 Próximamente: métricas.",1);
+</script>
+</body>
+</html>
