--- a/public/admin.html
+++ b/public/admin.html
@@ -160,10 +160,13 @@
     text-align:center;
     padding:6px 4px; font-size:13px;
   }
-  /* El token ocupa columnas 2-4 para alinearse con número+clicks+espacio y permite shrink */
+  /* El token ocupa columnas 1-3 (de "Rotar" a "clicks") y permite shrink */
   #token{
-    grid-column:2 / 5; /* 2,3,4 */
+    grid-column:1 / 4; /* 1,2,3 */
     min-width:0;       /* clave para que no desborde */
+    width:100%;
+    padding:8px 10px;
+    background:#2b2250;border:1px solid rgba(180,140,255,.35);border-radius:12px;color:#fff;font-size:13px;outline:none;
   }
   /* Ambos botones llenan su columna → simetría perfecta y no empujan el grid */
   .mini-inner .cfg-grid .btn{
@@ -259,9 +262,9 @@
         <div></div> <!-- col 4 (espaciador flexible) -->
         <button class="btn btn--thin btn--sm" id="btnSaveBS">Guardar</button> <!-- col 5 -->
 
-        <!-- Fila 2: Token (label vacío para alinear con col 1) -->
-        <span></span> <!-- col 1 vacío -->
-        <input id="token" type="text" placeholder="tok99-2025"> <!-- cols 2-4 -->
+        <!-- Fila 2: Token (token ocupa columnas 1-3; col 4 se deja vacía para que el botón caiga a col 5) -->
+        <input id="token" type="text" placeholder="tok99-2025"> <!-- cols 1-3 -->
+        <div></div> <!-- col 4 vacío -->
         <button class="btn btn--thin btn--sm" id="btnSaveToken">Guardar token</button> <!-- col 5 -->
       </div>
     </div>
