--- a/public/admin.html
+++ b/public/admin.html
@@ -161,6 +161,8 @@
     flex:0 0 auto !important;
     text-align:center;
     padding:6px 4px; font-size:13px;
+    #blocksize{ margin-left:-6px; } /* mueve el número y su casillero a la izquierda */
+
   }
   /* El token ocupa columnas 1-3 (de "Rotar" a "clicks") y permite shrink */
   #token{
