--- a/public/admin.html
+++ b/public/admin.html
@@ -156,12 +156,18 @@
 .cfg-label{ padding-left:8px; } /* 🔹 mueve "Rotar cada" hacia la derecha */
 
   /* Número compacto, centrado, ocupa su columna fija */
-  #blocksize{
-    width:100% !important;
-    flex:0 0 auto !important;
-    text-align:center;
-    padding:6px 4px; font-size:13px;
-    #blocksize{ margin-left:-30px; } /* mueve el número y su casillero a la izquierda */
+#blocksize{
+  width:100% !important;
+  flex:0 0 auto !important;
+  text-align:center;
+  padding:6px 4px;
+  font-size:13px;
+
+  /* desplazamiento hacia la izquierda */
+  justify-self:start;          /* permite que se mueva libremente */
+  width: var(--cfgNumberW);    /* mantiene el ancho fijo */
+  transform: translateX(-6px); /* mueve visualmente a la izquierda */
+}
 
   }
   /* El token ocupa columnas 1-3 (de "Rotar" a "clicks") y permite shrink */
