--- a/public/admin.html
+++ b/public/admin.html
@@ -155,18 +155,15 @@
 }
 .cfg-label{ padding-left:8px; } /* 🔹 mueve "Rotar cada" hacia la derecha */
 
-  /* Número compacto, centrado, ocupa su columna fija */
+  //* Número compacto, centrado, ocupa su columna fija */
 #blocksize{
   width:100% !important;
   flex:0 0 auto !important;
   text-align:center;
   padding:6px 4px;
   font-size:13px;
-
-  /* mover un poquito a la izquierda SIN romper el grid */
-  margin-left:-6px;  /* probá -8px o -10px si querés más */
+  margin-left:-6px; /* mueve el casillero a la izquierda */
 }
-
   }
   /* El token ocupa columnas 1-3 (de "Rotar" a "clicks") y permite shrink */
   #token{
